[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PrimaryLabels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label1" type="Label" parent="PrimaryLabels"]
anchor_left = 0.00488281
anchor_top = 0.09
anchor_right = 0.137695
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PL1
PRIMARY_LIGHT_1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="PrimaryLabels"]
anchor_left = 0.147461
anchor_top = 0.09
anchor_right = 0.280273
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PL2
PRIMARY_LIGHT_2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="PrimaryLabels"]
anchor_left = 0.290039
anchor_top = 0.09
anchor_right = 0.422852
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PL1
PRIMARY_LIGHT_1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="PrimaryLabels"]
anchor_left = 0.432617
anchor_top = 0.09
anchor_right = 0.566406
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PB
PRIMARY_BASE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label5" type="Label" parent="PrimaryLabels"]
anchor_left = 0.576172
anchor_top = 0.09
anchor_right = 0.708984
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PD1
PRIMARY_DARK_1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label6" type="Label" parent="PrimaryLabels"]
anchor_left = 0.71875
anchor_top = 0.09
anchor_right = 0.851562
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PD2
PRIMARY_DARK_2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label7" type="Label" parent="PrimaryLabels"]
anchor_left = 0.861328
anchor_top = 0.09
anchor_right = 0.995117
anchor_bottom = 0.146667
margin_top = -3.8147e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PD3
PRIMARY_DARK_3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SecondaryLabels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label1" type="Label" parent="SecondaryLabels"]
anchor_left = 0.00488281
anchor_top = 0.565
anchor_right = 0.137695
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SL3
SECONDARY_LIGHT_3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="SecondaryLabels"]
anchor_left = 0.147461
anchor_top = 0.565
anchor_right = 0.280273
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SL2
SECONDARY_LIGHT_2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="SecondaryLabels"]
anchor_left = 0.290039
anchor_top = 0.565
anchor_right = 0.422852
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SL1
SECONDARY_LIGHT_1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="SecondaryLabels"]
anchor_left = 0.432617
anchor_top = 0.565
anchor_right = 0.566406
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SB
SECONDARY_BASE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label5" type="Label" parent="SecondaryLabels"]
anchor_left = 0.576172
anchor_top = 0.565
anchor_right = 0.708984
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SD1
SECONDARY_DARK_1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label6" type="Label" parent="SecondaryLabels"]
anchor_left = 0.71875
anchor_top = 0.565
anchor_right = 0.851562
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SD2
SECONDARY_DARK_2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label7" type="Label" parent="SecondaryLabels"]
anchor_left = 0.861328
anchor_top = 0.565
anchor_right = 0.995117
anchor_bottom = 0.621667
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SD3
SECONDARY_DARK_3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 90
custom_constants/margin_left = 5
custom_constants/margin_bottom = 40

[node name="Palettes" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 90.0
margin_right = 1019.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100

[node name="Primary" type="HBoxContainer" parent="MarginContainer/Palettes"]
margin_right = 1014.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ColorRect1" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_right = 136.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.90098, 0.847059, 0.930392, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect1"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#E6D8ED

H: 279

S: 9

V/B: 93"
selection_enabled = true

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_left = 146.0
margin_right = 282.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.801961, 0.694118, 0.860784, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect2"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#CDB1DC

H: 279

S: 19

V/B: 86"
selection_enabled = true

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_left = 292.0
margin_right = 428.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.702941, 0.541176, 0.791176, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect3"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#B38ACA

H: 279

S: 32

V/B: 79"
selection_enabled = true

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_left = 438.0
margin_right = 575.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.603922, 0.388235, 0.721569, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect4"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#9A63B8

H: 279

S: 46

V/B: 72"
selection_enabled = true

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_left = 585.0
margin_right = 721.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.452941, 0.291176, 0.541176, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect5"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#744A8A

H: 279

S: 46

V/B: 54"
selection_enabled = true

[node name="ColorRect6" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_left = 731.0
margin_right = 867.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.301961, 0.194118, 0.360784, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect6"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#4D325C

H: 279

S: 46

V/B: 36"
selection_enabled = true

[node name="ColorRect7" type="ColorRect" parent="MarginContainer/Palettes/Primary"]
margin_left = 877.0
margin_right = 1014.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.15098, 0.0970588, 0.180392, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Primary/ColorRect7"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#27192E

H: 279

S: 46

V/B: 18"
selection_enabled = true

[node name="Secondary" type="HBoxContainer" parent="MarginContainer/Palettes"]
margin_top = 285.0
margin_right = 1014.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ColorRect1" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_right = 136.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.930392, 0.958824, 0.82549, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect1"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#EDF5D3

H: 73

S: 14

V/B: 96"
selection_enabled = true

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_left = 146.0
margin_right = 282.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.860784, 0.917647, 0.65098, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect2"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#DCEAA6

H: 73

S: 29

V/B: 92"
selection_enabled = true

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_left = 292.0
margin_right = 428.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.791176, 0.876471, 0.476471, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect3"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#CAE07A

H: 73

S: 46

V/B: 88"
selection_enabled = true

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_left = 438.0
margin_right = 575.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.721569, 0.835294, 0.301961, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect4"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#B8D54D

H: 73

S: 64

V/B: 84"
selection_enabled = true

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_left = 585.0
margin_right = 721.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.541176, 0.626471, 0.226471, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect5"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#8AA03A

H: 73

S: 64

V/B: 63"
selection_enabled = true

[node name="ColorRect6" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_left = 731.0
margin_right = 867.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.360784, 0.417647, 0.15098, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect6"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#5C6B27

H: 73

S: 64

V/B: 42"
selection_enabled = true

[node name="ColorRect7" type="ColorRect" parent="MarginContainer/Palettes/Secondary"]
margin_left = 877.0
margin_right = 1014.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.180392, 0.208824, 0.0754902, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Palettes/Secondary/ColorRect7"]
anchor_left = 0.118
anchor_top = 0.092
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0480003
margin_top = -0.0200005
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#2E3513

H: 73

S: 64

V/B: 21"
selection_enabled = true

[node name="ChangeColorPrimary" type="Button" parent="."]
anchor_left = 0.448242
anchor_top = 0.401667
anchor_right = 0.552734
anchor_bottom = 0.435
focus_mode = 0
enabled_focus_mode = 0
text = "change color"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChangeColorSecondary" type="Button" parent="."]
anchor_left = 0.448242
anchor_top = 0.881667
anchor_right = 0.552734
anchor_bottom = 0.915
focus_mode = 0
enabled_focus_mode = 0
text = "change color"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelContainerPrimary" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.611328
anchor_top = 0.0433333
anchor_right = 0.974609
anchor_bottom = 0.863333
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="ColorPicker" type="ColorPicker" parent="PanelContainerPrimary"]
margin_left = 31.0
margin_top = 31.0
margin_right = 389.0
margin_bottom = 509.0
edit_alpha = false
hsv_mode = true
presets_enabled = false

[node name="PanelContainerSecondary" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.611328
anchor_top = 0.0433333
anchor_right = 0.974609
anchor_bottom = 0.863333
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="ColorPicker" type="ColorPicker" parent="PanelContainerSecondary"]
margin_left = 35.0
margin_top = 35.0
margin_right = 393.0
margin_bottom = 513.0
edit_alpha = false
hsv_mode = true
presets_enabled = false

[connection signal="pressed" from="ChangeColorPrimary" to="." method="_on_ChangeColorPrimary_pressed"]
[connection signal="pressed" from="ChangeColorSecondary" to="." method="_on_ChangeColorSecondary_pressed"]
[connection signal="color_changed" from="PanelContainerPrimary/ColorPicker" to="." method="_on_PrimaryColorPicker_color_changed"]
[connection signal="color_changed" from="PanelContainerSecondary/ColorPicker" to="." method="_on_SecondaryColorPicker_color_changed"]
